# Keyswap

./: .env.example  .gitignore  HOW_KEYS_WORK.md  README.md  apply-fee-destination.mjs  finalcontract.md  init-protocol.mjs  package-lock.json  package.json  propose-fee-destination.mjs  solana-friendtech-fullstack.md
backend/: .dockerignore  .env.example  .gitignore  .railwayignore  Dockerfile  package-lock.json  package.json  railway.toml
backend/src/: env.ts  index.ts
backend/src/lib/: db.ts  indexer.ts  parser.ts  sol-price.ts  storage.ts
backend/src/routes/: keys.ts  upload.ts
friendtech-final/: Cargo.toml
friendtech-final/src/: errors.rs  lib.rs  pricing.rs  state.rs
friendtech-final/tests/: integration.rs
friendtech-shares/: Anchor.toml
friendtech-shares/programs/friendtech-shares/: Cargo.toml
frontend/: index.html  init-protocol.mjs  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  constants.ts  idl.ts  index.css  main.tsx  pricing.ts  program.ts
frontend/src/pages/: Create.tsx  Home.tsx  KeyPage.tsx
lovable-frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
lovable-frontend/src/: main.tsx  polyfills.ts  routeTree.gen.ts  router.tsx  styles.css
lovable-frontend/src/components/: Header.tsx  KeyAvatar.tsx  LaunchKeyDialog.tsx  PriceChart.tsx
lovable-frontend/src/lib/: api.ts  idl.ts  keys-store.ts  pricing.ts  program.ts  use-sol-price.ts  wallet-provider.tsx
lovable-frontend/src/routes/: __root.tsx  guide.tsx  index.tsx  k.$keyId.tsx  launch.tsx  (+1 more)
supabase/: schema.sql
(+11 files in other folders)
